[gd_scene load_steps=41 format=2]

[ext_resource path="res://src/flappy_bird/scenes/Ground/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/flappy_bird/scenes/Bird/Bird.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/flappy_bird/scenes/Stage/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://src/flappy_bird/scenes/Ground/SpawnerGround.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/flappy_bird/scenes/Pipe/SpawnerPipe.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/flappy_bird/sprites/instructions.png" type="Texture" id=6]
[ext_resource path="res://src/flappy_bird/scenes/Stage/StartButton.gd" type="Script" id=7]
[ext_resource path="res://assets/flappy_bird/sprites/button_score_pressed.png" type="Texture" id=8]
[ext_resource path="res://src/flappy_bird/scenes/Stage/Score.gd" type="Script" id=9]
[ext_resource path="res://assets/flappy_bird/sprites/button_play_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/flappy_bird/sprites/button_play_normal.png" type="Texture" id=11]
[ext_resource path="res://assets/flappy_bird/sprites/label_game_over.png" type="Texture" id=12]
[ext_resource path="res://assets/flappy_bird/sprites/button_score_normal.png" type="Texture" id=13]
[ext_resource path="res://assets/flappy_bird/sprites/panel_score.png" type="Texture" id=14]
[ext_resource path="res://src/flappy_bird/scenes/Stage/GameOver.gd" type="Script" id=15]
[ext_resource path="res://src/flappy_bird/scenes/Stage/ScoreContainer.gd" type="Script" id=16]
[ext_resource path="res://assets/flappy_bird/sprites/label_new.png" type="Texture" id=17]
[ext_resource path="res://assets/flappy_bird/sprites/medal_bronze.png" type="Texture" id=18]
[ext_resource path="res://assets/flappy_bird/sprites/spark_1.png" type="Texture" id=19]
[ext_resource path="res://assets/flappy_bird/sprites/spark_0.png" type="Texture" id=20]
[ext_resource path="res://assets/flappy_bird/sprites/spark_2.png" type="Texture" id=21]
[ext_resource path="res://assets/flappy_bird/sprites/button_pause.png" type="Texture" id=22]
[ext_resource path="res://assets/flappy_bird/sprites/rect_black.png" type="Texture" id=23]
[ext_resource path="res://assets/flappy_bird/sprites/button_resume.png" type="Texture" id=24]
[ext_resource path="res://assets/flappy_bird/sprites/button_menu.png" type="Texture" id=25]
[ext_resource path="res://assets/flappy_bird/sprites/label_get_ready.png" type="Texture" id=26]
[ext_resource path="res://src/flappy_bird/scenes/Stage/GA.gd" type="Script" id=27]

[sub_resource type="GDScript" id=1]
resource_name = "BestScoreContainer"
script/source = "extends HBoxContainer

const sprite_numbers = [
	preload(\"res://assets/flappy_bird/sprites/number_medium_0.png\"),
	preload(\"res://assets/flappy_bird/sprites/number_medium_1.png\"),
	preload(\"res://assets/flappy_bird/sprites/number_medium_2.png\"),
	preload(\"res://assets/flappy_bird/sprites/number_medium_3.png\"),
	preload(\"res://assets/flappy_bird/sprites/number_medium_4.png\"),
	preload(\"res://assets/flappy_bird/sprites/number_medium_5.png\"),
	preload(\"res://assets/flappy_bird/sprites/number_medium_6.png\"),
	preload(\"res://assets/flappy_bird/sprites/number_medium_7.png\"),
	preload(\"res://assets/flappy_bird/sprites/number_medium_8.png\"),
	preload(\"res://assets/flappy_bird/sprites/number_medium_9.png\"),
]


func _ready() -> void:
	var err := Game.connect(\"best_score_changed\", self, \"_on_best_score_changed\")
	if err != OK:
		print_debug(\"Error while connecting: \", err)
	set_number(Game.best_score)
	pass


func _on_best_score_changed() -> void:
	set_number(Game.best_score)
	pass


func set_number(number: int) -> void:
	for child in get_children():
		child.free()
	update_score(number)
	pass


func update_score(number: int) -> void:
	var digits = get_digits(number)
	for digit in digits:
		var texture_rect = TextureRect.new()
		texture_rect.texture = sprite_numbers[digit]
		add_child(texture_rect)
	pass


func get_digits(score: int) -> Array:
	var str_score = str(score)
	var digits = []
	for i in range(str_score.length()):
		digits.append(str_score[i].to_int())
	return digits
	pass
"

[sub_resource type="GDScript" id=2]
resource_name = "NewBest"
script/source = "extends TextureRect

func _ready() -> void:
	hide()
	var err := Game.connect(\"best_score_changed\", self, \"show\")
	if err != OK:
		print_debug(\"Error while connecting: \", err)
	pass
"

[sub_resource type="GDScript" id=3]
resource_name = "Medal"
script/source = "extends TextureRect

signal shown

const medals = [
	preload(\"res://assets/flappy_bird/sprites/medal_bronze.png\"),
	preload(\"res://assets/flappy_bird/sprites/medal_silver.png\"),
	preload(\"res://assets/flappy_bird/sprites/medal_gold.png\"),
	preload(\"res://assets/flappy_bird/sprites/medal_platinum.png\")
]

func _ready() -> void:
	hide()
	pass


func _on_ScoreContainer_counting_finished() -> void:
	show_medal()
	pass


func show_medal() -> void:
	var medal_texture = null
	
	if Game.current_score  >= Game.MEDAL_BRONZE: medal_texture = medals[0]
	if Game.current_score  >= Game.MEDAL_SILVER: medal_texture = medals[1]
	if Game.current_score  >= Game.MEDAL_GOLD: medal_texture = medals[2]
	if Game.current_score  >= Game.MEDAL_PLATINUM: medal_texture = medals[3]
	
	if medal_texture != null:
		show()
		texture = medal_texture
		emit_signal(\"shown\")
	pass
"

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ), null ],
"loop": true,
"name": "spark",
"speed": 10.0
} ]

[sub_resource type="GDScript" id=5]
resource_name = "SparkAnim"
script/source = "extends AnimatedSprite


func _ready() -> void:
	to_random_pos()
	pass

func to_random_pos():
	var rand_angle = deg2rad(rand_range(0, 360))
	var medal = get_parent() as TextureRect
	var medal_radius = medal.texture.get_size().x / 2
	var rand_radius = rand_range(0, medal_radius)
	var x = rand_radius * cos(rand_angle) + medal_radius
	var y = rand_radius * sin(rand_angle) + medal_radius
	position = Vector2(x, y)
	pass


func _on_Medal_shown() -> void:
	play(\"spark\")
	pass


func _on_SparkAnim_animation_finished() -> void:
	to_random_pos()
	play(\"spark\")
	pass
"

[sub_resource type="GDScript" id=6]
script/source = "extends TextureButton

func _ready() -> void:
	self_modulate.a = 0
	disabled = true
	pass


func _on_ScoreContainer_counting_finished() -> void:
	self_modulate.a = 1
	disabled = false
	grab_focus()
	pass


func _on_PlayButton_pressed() -> void:
	StageManager.change_stage(StageManager.GAME_STAGE)
	pass
"

[sub_resource type="GDScript" id=7]
script/source = "extends TextureButton

func _ready() -> void:
	self_modulate.a = 0
	disabled = true
	pass


func _on_ScoreContainer_counting_finished() -> void:
	self_modulate.a = 1
	disabled = false
	pass
"

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/GameOverTexture:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/GameOverTexture:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture:margin_top")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 200.0, 41.0 ]
}

[sub_resource type="GDScript" id=9]
resource_name = "PauseButton"
script/source = "extends TextureButton


func _ready():
	show()
	var bird = get_tree().root.find_node(\"Bird\", true, false) as Bird
	if bird:
		bird.connect(\"state_changed\", self, \"_on_bird_state_changed\")
	pass


func _on_PauseButton_pressed() -> void:
	get_tree().paused = true
	pass


func _on_bird_state_changed(bird: Bird) -> void:
	match bird.get_state():
		bird.States.HIT:
			hide()
		bird.States.GROUNDED:
			hide()
	pass
"

[sub_resource type="GDScript" id=10]
resource_name = "PauseOverlay"
script/source = "extends Control


func _ready() -> void:
	hide()
	pass


func _on_PauseButton_pressed() -> void:
	show()
	pass


func _on_ResumeButton_pressed() -> void:
	hide()
	pass
"

[sub_resource type="GDScript" id=11]
script/source = "extends TextureButton



func _on_ResumeButton_pressed() -> void:
	get_tree().paused = false
	pass
"

[sub_resource type="GDScript" id=12]
script/source = "extends TextureButton



func _on_MenuButton_pressed() -> void:
	get_tree().paused = false
	StageManager.change_stage(StageManager.MENU_STAGE)
	pass
"

[sub_resource type="GDScript" id=13]
resource_name = "Shaker"
script/source = "extends Node

const duration := 0.18
const magnitude := 3
var time := 0.0
onready var camera = get_parent() as Camera2D


func _ready() -> void:
	if get_tree().root.find_node(\"GA\", true, false).run_simulation: return
	
	var bird := get_tree().root.find_node(\"Bird\", true, false) as Bird
	if bird:
		var err := bird.connect(\"state_changed\", self, \"_on_bird_state_changed\")
		if err != OK:
			print_debug(\"Error while connecting\", err)
	pass


func shake() -> void:
	var initial_offset = camera.offset
	while time < duration:
		time += get_process_delta_time()
		time = min(time, duration)
		
		var offset = Vector2.ZERO
		offset.x = rand_range(-magnitude, magnitude)
		offset.y = rand_range(-magnitude, magnitude)
		camera.offset = offset + initial_offset
		
		yield(get_tree(), \"idle_frame\")
	
	time = 0.0
	camera.offset = initial_offset
	pass


func _on_bird_state_changed(bird: Bird):
	if bird.get_state() == bird.States.HIT or bird.get_state() == bird.States.GROUNDED:
		shake()
		bird.disconnect(\"state_changed\", self, \"_on_bird_state_changed\")
	pass
"

[node name="MainStage" type="Node2D"]

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="StartButton" type="TextureButton" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
action_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TapTap" type="TextureRect" parent="HUD/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -24.5
margin_right = 28.5
margin_bottom = 24.5
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetReady" type="TextureRect" parent="HUD/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -60.0
margin_right = 46.0
margin_bottom = 20.0
texture = ExtResource( 26 )

[node name="Score" type="HBoxContainer" parent="HUD"]
anchor_right = 1.0
margin_top = 10.0
mouse_filter = 2
custom_constants/separation = 5
alignment = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverContainer" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HUD/GameOverContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOverContainer/CenterContainer"]
margin_left = 15.0
margin_top = 57.0
margin_right = 128.0
margin_bottom = 199.0
custom_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer"]
margin_right = 113.0
margin_bottom = 98.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 113.0
margin_bottom = 21.0
alignment = 1

[node name="GameOverTexture" type="TextureRect" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 8.0
margin_right = 104.0
margin_bottom = 21.0
texture = ExtResource( 12 )

[node name="ScoreBoardTexture" type="TextureRect" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 113.0
margin_bottom = 98.0
texture = ExtResource( 14 )

[node name="ScoreContainer" type="HBoxContainer" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 16.0
margin_right = -10.0
margin_bottom = 25.2731
custom_constants/separation = 1
alignment = 2
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScoreContainer" type="HBoxContainer" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 36.5788
margin_right = -10.0
margin_bottom = 45.8519
custom_constants/separation = 1
alignment = 2
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="TextureRect" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -46.6511
margin_top = 29.3487
margin_right = -30.6511
margin_bottom = 36.3487
texture = ExtResource( 17 )
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medal" type="TextureRect" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture"]
margin_left = 13.3872
margin_top = 20.8591
margin_right = 35.3872
margin_bottom = 42.8591
texture = ExtResource( 18 )
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SparkAnim" type="AnimatedSprite" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture/Medal"]
frames = SubResource( 4 )
animation = "spark"
script = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 113.0
margin_bottom = 142.0

[node name="PlayButton" type="TextureButton" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 52.0
margin_bottom = 29.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
script = SubResource( 6 )

[node name="Spacer" type="Label" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 57.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="LeaderboardButton" type="TextureButton" parent="HUD/GameOverContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 61.0
margin_right = 113.0
margin_bottom = 29.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
script = SubResource( 7 )

[node name="GameOverAnim" type="AnimationPlayer" parent="HUD/GameOverContainer"]
playback_speed = 1.5
anims/show = SubResource( 8 )

[node name="PauseButton" type="TextureButton" parent="HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 13.0
margin_bottom = 14.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 22 )
script = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="Control" parent="HUD"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="TextureRect" parent="HUD/PauseOverlay"]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 23 )
expand = true

[node name="ResumeButton" type="TextureButton" parent="HUD/PauseOverlay"]
margin_left = 10.0
margin_top = 10.0
margin_right = 13.0
margin_bottom = 14.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 24 )
script = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="TextureButton" parent="HUD/PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 25 )
script = SubResource( 12 )

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2( -25, 0 )
anchor_mode = 0
current = true
script = ExtResource( 3 )

[node name="Shaker" type="Node" parent="Camera"]
script = SubResource( 13 )

[node name="SpawnerGround" parent="." instance=ExtResource( 4 )]

[node name="SpawnerPipe" parent="." instance=ExtResource( 5 )]

[node name="Birds" type="Node" parent="."]

[node name="Bird" parent="Birds" instance=ExtResource( 2 )]

[node name="GA" type="Node" parent="."]
script = ExtResource( 27 )
run_simulation = false
agent = ExtResource( 2 )
container = NodePath("../Birds")
[connection signal="counting_finished" from="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture/ScoreContainer" to="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture/Medal" method="_on_ScoreContainer_counting_finished"]
[connection signal="counting_finished" from="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture/ScoreContainer" to="HUD/GameOverContainer/CenterContainer/VBoxContainer/HBoxContainer/PlayButton" method="_on_ScoreContainer_counting_finished"]
[connection signal="counting_finished" from="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture/ScoreContainer" to="HUD/GameOverContainer/CenterContainer/VBoxContainer/HBoxContainer/LeaderboardButton" method="_on_ScoreContainer_counting_finished"]
[connection signal="shown" from="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture/Medal" to="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture/Medal/SparkAnim" method="_on_Medal_shown"]
[connection signal="animation_finished" from="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture/Medal/SparkAnim" to="HUD/GameOverContainer/CenterContainer/VBoxContainer/VBoxContainer/ScoreBoardTexture/Medal/SparkAnim" method="_on_SparkAnim_animation_finished"]
[connection signal="pressed" from="HUD/GameOverContainer/CenterContainer/VBoxContainer/HBoxContainer/PlayButton" to="HUD/GameOverContainer/CenterContainer/VBoxContainer/HBoxContainer/PlayButton" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HUD/PauseButton" to="HUD/PauseButton" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="HUD/PauseButton" to="HUD/PauseOverlay" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="HUD/PauseOverlay/ResumeButton" to="HUD/PauseOverlay" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="HUD/PauseOverlay/ResumeButton" to="HUD/PauseOverlay/ResumeButton" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="HUD/PauseOverlay/MenuButton" to="HUD/PauseOverlay/MenuButton" method="_on_MenuButton_pressed"]
